<resources>
    <string name="app_name">Владимир Папин</string>
    <string name="rating">Рейтинг</string>
    <string name="code_line">Написано строк кода</string>
    <string name="project">Проектов</string>
    <string name="mobile_phone">Мобильный телефон</string>
    <string name="email">E-mail</string>
    <string name="vk">Профиль в Vk</string>
    <string name="repository">Репозиторий</string>
    <string name="about">О себе</string>
    <string name="about_text">Я буду сильным всем назло, хоть будет трудно улыбаться. Жизнь не закончилась еще, жизнь начинает продолжаться! Наверное единственное, что очень не нравится - разбираться в чужом коде, исправлять чужие ошибки, так как, как правило, неработающий (работающий неправильно) код, который приходится исправлять - недоделанный, плохой код, написанный коряво или, того хуже, вообще \"говнокод\". В этих случаях так и просится сказать цитату из анекдота: \"Чукча не читатель, Чукча - писатель!\". Вообще я считаю, разработчик, программист, пишущий любую систему или программу должен представить, что пользователи, которые будут пользоваться его разработкой, а тем более люди, которые потом будут сопровождать его разработку - психопаты, страдающие маниакальной стратью к насилию и жестокости, и которые прекрасно знаю, где проживает этот самый разработчик и где его можно встретить, чтобы отблагодарить по достоинству. Все мы делаем ошибки, не без этого, но у некоторых это просто паталогия какая-то.</string>
    <string name="user_profile.placeholder.image">Изменить фотографию профиля</string>
    <string name="user_profile.dialog.gallery">Загрузить из галлереи</string>
    <string name="user_profile.dialog.camera">Сделать снимок</string>
    <string name="user.dialog.cancel">Отмена</string>
    <string name="user_profile.title">Изменить фотографию профиля</string>
    <string name="user_profile_chose_message">выберите фото</string>
    <string name="ask_permission_snakebar">Для корректной работы приложения необходимо дать требуемые разрешения</string>
    <string name="allow">Разрешить</string>
    <string name="no_correct_phone_number">Не коректный номер телефона</string>
    <string name="no_correct_email">Не коректный email</string>
    <string name="no_correct_vk">Не коректный адрес Vk</string>
    <string name="no_correct_git">Не коректный адрес Git</string>
    <string name="login_enter">ВОЙТИ</string>
    <string name="e_mail_login">E-mail</string>
    <string name="were_passwprd_login">Забыли пароль?</string>
    <string name="login_enter_btn">ВОЙТИ</string>
    <string name="password_login">Пароль</string>
    <string name="fio">Фамилия Имя</string>
    <string name="ff_medium">sans-serif-condensed-medium</string>
    <string name="ff_regular">sans-serif</string>
    <string name="view_txt">Просмотр</string>
    <string name="team">Команда</string>
    <string name="my_profile">Мой профиль</string>
    <string name="my_team">Команда</string>
</resources>
