<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="2dp"
    android:layout_marginTop="@dimen/spacing_small_8"
    app:cardBackgroundColor="@color/color_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.softdesign.devintensive.ui.views.AspectRatioImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/users_photo"
                android:src="@drawable/user_bg"
                android:scaleType="centerCrop"
                app:aspect_ratio="1.78"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_full_name_txt"
                android:text="@string/fio"
                android:textColor="@color/color_white"
                android:fontFamily="@string/ff_medium"
                android:textSize="@dimen/font_large_24"
                android:paddingLeft="@dimen/spacing_normal_16"
                android:paddingRight="@dimen/spacing_normal_16"
                android:paddingBottom="@dimen/spacing_medial_24"
                android:layout_gravity="bottom"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_large_72"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="0.25">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/raiting_txt_user"
                    android:text="0"
                    android:fontFamily="@string/ff_medium"
                    android:textSize="@dimen/font_large_20"
                    android:textColor="@color/color_black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:fontFamily="@string/ff_regular"
                    android:textSize="@dimen/font_normal_14"
                    android:textColor="@color/color_black"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/code_line_txt_user"
                    android:text="0"
                    android:fontFamily="@string/ff_medium"
                    android:textSize="@dimen/font_large_20"
                    android:textColor="@color/color_black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/code_line"
                    android:fontFamily="@string/ff_regular"
                    android:textSize="@dimen/font_normal_14"
                    android:textColor="@color/color_black"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="0.25">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/project_txt_user"
                    android:text="0"
                    android:fontFamily="@string/ff_medium"
                    android:textSize="@dimen/font_large_20"
                    android:textColor="@color/color_black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/project"
                    android:fontFamily="@string/ff_regular"
                    android:textSize="@dimen/font_normal_14"
                    android:textColor="@color/color_black"/>

            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bio_txt_user"
            android:textColor="@color/color_light_grey"
            android:text="@string/about_text"
            android:maxLines="3"
            android:paddingLeft="@dimen/spacing_normal_16"
            android:paddingRight="@dimen/spacing_normal_16"
            android:fontFamily="@string/ff_regular"
            android:textSize="@dimen/font_normal_14"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_light_grey"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:layout_marginBottom="@dimen/spacing_small_8"/>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/more_info_btn"
            android:text="@string/view_txt"
            android:textColor="@color/color_login_red"
            android:paddingLeft="@dimen/spacing_normal_16"
            android:paddingRight="@dimen/spacing_normal_16"/>

    </LinearLayout>

</android.support.v7.widget.CardView>