<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".ui.activities.MainActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_large_112"
        android:orientation="horizontal"
        android:background="@color/color_dark_grey"
        android:paddingTop="@dimen/spacing_medium_32"
        android:paddingBottom="@dimen/spacing_medial_24">
        <!-- HEADER -->
        <LinearLayout
            style="@style/headerCellLinearLayout"
            android:layout_weight="1.25">
            <TextView
                style="@style/textViewHeaderNumber"
                android:id="@+id/count_rating"
                android:text="5"/>
            <TextView
                style="@style/textViewHeaderText"
                android:text="@string/rating"/>
        </LinearLayout>
        <LinearLayout style="@style/headerVerticalLine"> </LinearLayout>
        <LinearLayout
            style="@style/headerCellLinearLayout"
            android:layout_weight="2">
            <TextView
                style="@style/textViewHeaderNumber"
                android:id="@+id/count_code_line"
                android:text="5"/>
            <TextView
                style="@style/textViewHeaderText"
                android:text="@string/code_line"/>
        </LinearLayout>
        <LinearLayout style="@style/headerVerticalLine"> </LinearLayout>
        <LinearLayout
            style="@style/headerCellLinearLayout"
            android:layout_weight="1.25">
            <TextView
                style="@style/textViewHeaderNumber"
                android:id="@+id/count_projects"
                android:text="5"/>
            <TextView
                style="@style/textViewHeaderText"
                android:text="@string/project"/>
        </LinearLayout>

    </LinearLayout>
    <!-- END HEADER -->


    <!-- Phone number row -->

    <LinearLayout
        style="@style/rowContayner">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_call_black_24dp"/>

        <android.support.design.widget.TextInputLayout
            style="@style/rowTextInputLayout">
            <EditText
                android:id="@+id/phoneNumber"
                style="@style/rowEditText"
                android:hint="@string/mobile_phone"
                android:text="+7 966 095 55 38"
                android:inputType="phone"/>
        </android.support.design.widget.TextInputLayout>

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_phone_in_talk_black_24dp"/>
    </LinearLayout>

    <!-- END phone number row -->

    <LinearLayout style="@style/horizontalLine"> </LinearLayout>

    <!-- Email row -->

    <LinearLayout
        style="@style/rowContayner">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_local_post_office_black_24dp"/>

        <android.support.design.widget.TextInputLayout
            style="@style/rowTextInputLayout">
            <EditText
                android:id="@+id/email"
                style="@style/rowEditText"
                android:hint="@string/email"
                android:text="vladpap@mail.ru"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_send_black_24dp"/>
    </LinearLayout>

    <!-- End email row -->

    <LinearLayout style="@style/horizontalLine"> </LinearLayout>

    <!-- vk row -->

    <LinearLayout
        style="@style/rowContayner">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/vk"/>

        <android.support.design.widget.TextInputLayout
            style="@style/rowTextInputLayout">
            <EditText
                android:id="@+id/vk"
                style="@style/rowEditText"
                android:hint="@string/vk"
                android:text="https://vk.com/id125528752"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_remove_red_eye_black_24dp"/>
    </LinearLayout>

    <!-- End vk row -->

    <LinearLayout style="@style/horizontalLine"> </LinearLayout>

    <!-- github row -->

    <LinearLayout
        style="@style/rowContayner">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/github"/>

        <android.support.design.widget.TextInputLayout
            style="@style/rowTextInputLayout">
            <EditText
                android:id="@+id/repository"
                style="@style/rowEditText"
                android:hint="@string/repository"
                android:text="github.com/vladpap/DevIntensive"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_remove_red_eye_black_24dp"/>
    </LinearLayout>

    <!-- End github row -->

    <LinearLayout style="@style/horizontalLine"> </LinearLayout>

    <!-- About row -->

    <LinearLayout
        style="@style/rowContayner">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_account_circle_black_24dp"/>

        <android.support.design.widget.TextInputLayout
            style="@style/rowTextInputLayout">
            <EditText
                android:id="@+id/about"
                style="@style/rowEditText"
                android:hint="@string/about"
                android:text="Я буду сильным всем назло, хоть будет трудно улыбаться. Жизнь не закончилась еще, жизнь начинает продолжаться! "
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_remove_red_eye_black_24dp"/>
    </LinearLayout>

    <!-- End about row -->

</LinearLayout>
