<?xml version="1.0" encoding="utf-8"?>

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_coordinator_content_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar_layout_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="@color/color_primary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/profile_image_size"
                    android:fitsSystemWindows="true">

                    <ImageView
                        android:id="@+id/user_photo_img_user"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/profile_image_size"
                        android:fitsSystemWindows="true"
                        android:scaleType="centerCrop"
                        android:background="@color/color_primary_dark"
                        android:src="@drawable/user_bg"/>

                </FrameLayout>



                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar_user"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/AppTheme.PopupOverlay"
                    app:layout_collapseMode="pin"/>

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>


        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nested_scroll_view_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/nested_scroll_view"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <!-- HEADER -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <!-- Phone number row -->
<!--
                <LinearLayout
                    style="@style/rowContayner">

                    <ImageView
                        style="@style/icon.left"
                        android:id="@+id/phone_call_user"
                        android:src="@drawable/ic_call_black_24dp"/>

                    <android.support.design.widget.TextInputLayout
                        style="@style/rowTextInputLayout">

                        <EditText
                            android:id="@+id/phoneNumber_user"
                            style="@style/rowEditText"
                            android:hint="@string/mobile_phone"
                            android:inputType="phone"
                            android:text="+7 966 095 55 37"/>
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/phone_sms_user"
                        style="@style/icon.right"
                        android:src="@drawable/ic_perm_phone_msg_black_24dp"/>
                </LinearLayout>
-->
                <!-- END phone number row -->

                <!--<View style="@style/horizontalLine"/>-->

                <!-- Email row -->
<!--
                <LinearLayout
                    style="@style/rowContayner">

                    <ImageView
                        style="@style/icon.left"
                        android:id="@+id/send_mail_user"
                        android:src="@drawable/ic_local_post_office_black_24dp"/>

                    <android.support.design.widget.TextInputLayout
                        style="@style/rowTextInputLayout">

                        <EditText
                            android:id="@+id/email_user"
                            style="@style/rowEditText"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:text="vladpap@mail.ru"/>
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        style="@style/icon.right"
                        android:id="@+id/send_mail_2_user"
                        android:src="@drawable/ic_send_black_24dp"/>
                </LinearLayout>
-->
                <!-- End email row -->

                <!--<View style="@style/horizontalLine"/>-->

                <!-- vk row -->
<!--
                <LinearLayout
                    style="@style/rowContayner">

                    <ImageView
                        style="@style/icon.left"
                        android:id="@+id/view_vk_user"
                        android:src="@drawable/vk"/>

                    <android.support.design.widget.TextInputLayout
                        style="@style/rowTextInputLayout">

                        <EditText
                            android:id="@+id/vk_user"
                            style="@style/rowEditText"
                            android:hint="@string/vk"
                            android:inputType="text"
                            android:text="vk.com/id125528752"/>
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        style="@style/icon.right"
                        android:id="@+id/view_vk_2_user"
                        android:src="@drawable/ic_remove_red_eye_black_24dp"/>
                </LinearLayout>
-->
                <!-- End vk row -->

                <!--<View style="@style/horizontalLine"/>-->

                <!-- github row -->

                <LinearLayout
                    style="@style/rowContayner">

                    <ImageView
                        style="@style/icon.left"
                        android:id="@+id/view_git_user"
                        android:src="@drawable/github"/>

                    <ListView
                        android:layout_marginLeft="@dimen/spacing_normal_16"
                        android:id="@+id/repositories_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <!-- End github row -->

                <View style="@style/horizontalLine"/>

                <!-- About row -->

                <LinearLayout
                    style="@style/rowContayner">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/ic_account_circle_black_24dp"/>

                    <android.support.design.widget.TextInputLayout
                        style="@style/rowTextInputLayout"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/about_user"
                            style="@style/rowEditText"
                            android:paddingRight="@dimen/spacing_medium_32"
                            android:hint="@string/about"
                            android:inputType="textMultiLine"
                            android:text="@string/about_text"/>
                    </android.support.design.widget.TextInputLayout>

                    <!--
                    <ImageView
                        style="@style/icon.right"
                        android:src="@drawable/ic_remove_red_eye_black_24dp"/>
                        -->

                </LinearLayout>

                <!-- End about row -->
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <!-- HEADER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacing_medial_24"
            android:paddingBottom="@dimen/spacing_medial_24"
            android:background="@color/color_grey"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_anchor="@id/nested_scroll_view_user"
            app:layout_anchorGravity="top"
            app:layout_behavior=".ui.behaviors.HeaderBehavior">

            <LinearLayout
                style="@style/headerCellLinearLayout"
                android:layout_weight="1.25">

                <TextView
                    android:id="@+id/count_rating_user"
                    style="@style/textViewHeaderNumber"
                    android:text="5"/>

                <TextView
                    style="@style/textViewHeaderText"
                    android:text="@string/rating"/>
            </LinearLayout>

            <View style="@style/headerVerticalLine"/>

            <LinearLayout
                style="@style/headerCellLinearLayout"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/count_code_line_user"
                    style="@style/textViewHeaderNumber"
                    android:text="5"/>

                <TextView
                    style="@style/textViewHeaderText"
                    android:text="@string/code_line"/>
            </LinearLayout>

            <View style="@style/headerVerticalLine"/>

            <LinearLayout
                style="@style/headerCellLinearLayout"
                android:layout_weight="1.25">

                <TextView
                    android:id="@+id/count_projects_user"
                    style="@style/textViewHeaderNumber"
                    android:text="5"/>

                <TextView
                    style="@style/textViewHeaderText"
                    android:text="@string/project"/>
            </LinearLayout>

        </LinearLayout>
        <!-- END HEADER -->


    </android.support.design.widget.CoordinatorLayout>
